--- a/UI/audio-repo/public/index.html
+++ b/UI/audio-repo/public/index.html
@@ -11,6 +11,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
   <title>Message Repo</title>
 </head>
@@ -19,6 +23,17 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
+
+  <script>
+    $(document).ready(function () {
+
+      $(function () {
+        $("#datepicker").datepicker({
+          dateFormat: "dd-mm-yy"
+        });
+      });
+    }) 
+  </script>
 </body>
 
 </html>
