--- a/UI/audio-repo/public/index.html
+++ b/UI/audio-repo/public/index.html
@@ -6,12 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Church messages for free listening" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
 
   <title>Message Repo</title>
 </head>
